@@ -1,3 +1,8 @@
+2014-11-28  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR rtl-optimization/64087
+	*  gcc.dg/pr64087.c: New.
+
 2014-11-28  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR rtl-optimization/64037
